<resources>
    <string name="app_name">Mars App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rover_image">Rover Image</string>
    <string name="mars_image">Mars Image</string>
    <string name="mission_name">Mission Name:</string>
    <string name="rover_name">Rover Name:</string>
    <string name="launched_on">Launched On:</string>
    <string name="landed_on">Landed On:</string>
    <string name="main_job">Main Job:</string>
    <string name="see_images">See Images</string>
    <string name="images">Images</string>

    <!--Fake Data-->
    <string name="dummy_mission_name">Mars 2020</string>
    <string name="dummy_rover_name">Perseverance</string>
    <string name="dummy_launched_on">July 30, 2020</string>
    <string name="dummy_landed_on">Feb, 18, 2021</string>
    <string name="dummy_main_job">Seek signs of ancient life and collect samples of rock and regolith (broken rock and soil) for possible return to Earth.</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="initial_sol">0</string>
    <string name="martian_sol">Martian Sol</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="filter_options_action_button">Filter options action button</string>
    <string name="detail_rover">Rover:\u0020</string>
    <string name="detail_date">Date:\u0020</string>
    <string name="detail_camera">Camera:\u0020</string>
    <string name="detail_martian_sol">Martian Sol:\u0020</string>


</resources>